fix: fix the gap issue when drawing on the canvas

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,9 +1,12 @@
 html {
     height: 100%;
+    width: 100%;
 }
 body {
     margin: 0;
     height: 100%;
+    width: 100%;
+    overflow-x: hidden;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -14,6 +17,7 @@ code {
 }
 .app {
     height: 100%;
+    width: 100%;
     text-align: center;
 }
 h2 {
@@ -25,10 +29,11 @@ h2 {
     font-size: calc(10px + 2vmin);
     color: white;
     padding: 4vmin;
+    z-index: 25;
 
 }
 .app-body {
-    position: relative;
     height: 100%;
+    width: 100%;
 }
 
